# mcp-json-sanity

./: .env.example  README.md  billing.py  debug_stripe.py  index.html  legal.html  legal.md  pyproject.toml  repair_logic.py  requirements.txt  server.py  test_live_billing.py
supabase/: migrations.sql
tests/: smoke_test.py  test_billing.py  test_repair.py
