[project]
name = "mcp-json-sanity"
version = "0.1.0"
description = "MCP server for JSON validation and repair, SSE transport"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.27.0",
    "sse-starlette>=3.3.4",
    "starlette>=1.0.0",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
